force-app/main/default/objects/Bulletin_Status__c/fields/Status_Order_Support__c.field-meta.xml
<CustomField>
    <fullName>Status_Order_Support__c</fullName>
    <label>Status Order (Support)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>