force-app/main/default/objects/Bulletin_Status__c/fields/Suggestion_Status__c.field-meta.xml
<CustomField>
    <fullName>Suggestion_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suggestion Status</label>
    <type>Checkbox</type>
</CustomField>