force-app/main/default/objects/Bulletin_Status__c/fields/Support_Status__c.field-meta.xml
<CustomField>
    <fullName>Support_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Support Status</label>
    <type>Checkbox</type>
</CustomField>